reset daemons at the end of vignettes

--- a/vignettes/custom-functions.Rmd
+++ b/vignettes/custom-functions.Rmd
@@ -91,7 +91,6 @@ dat |>
 It also provides some functions mimicking the `purrr` API, such as `mirai_map()`:
 
 ```{r}
-
 dat |>
   as.list(as_series = FALSE) |>
   mirai::mirai_map(\(s) scale(s)[, 1]) |>
@@ -107,3 +106,8 @@ Using custom functions is sometimes necessary when processing data.
 `polars` allows one to chain many expressions, thus making it possible to create custom functions that benefit from all its optimizations, such as parallelism and streaming mode.
 
 While using `polars` expressions is the recommended way to write custom functions, one can also apply functions by converting the DataFrame or LazyFrame to R first, and then use `purrr` or `mirai` to run functions in parallel.
+
+<!-- Reset daemons to avoid errors in other vignettes that might use them -->
+```{r, echo=FALSE}
+daemons(0)
+```
