--- a/vignettes/custom-functions.Rmd
+++ b/vignettes/custom-functions.Rmd
@@ -109,5 +109,5 @@ While using `polars` expressions is the recommended way to write custom function
 
 <!-- Reset daemons to avoid errors in other vignettes that might use them -->
 ```{r, echo=FALSE}
-daemons(0)
+mirai::daemons(0)
 ```
