replace `.parallel = TRUE` by `in_parallel()`

--- a/vignettes/custom-functions.Rmd
+++ b/vignettes/custom-functions.Rmd
@@ -58,17 +58,19 @@ Those are not in the R implementation because we cannot guarantee that they will
 
 Note that when you convert your `polars` object to R, you may run out of memory if your object is a LazyFrame that is too big to fit in memory once collected.
 Another crucial point is that we want the R function to run as fast as possible on the data.
-One way to do that is to take advantage of `purrr` to run the function [in parallel](https://purrr.tidyverse.org/dev/reference/parallelization.html).
+One way to do that is to take advantage of `purrr` to run the function [in parallel](https://purrr.tidyverse.org/dev/reference/in_parallel.html).
 
 **Note:** at the time of writing, this requires the development version of `purrr` (1.0.4.9000) and the package `mirai`.
 
 ```{r}
+library(purrr)
+
 # Set the number of background processes to use
 mirai::daemons(3)
 
 dat |>
   as.list(as_series = FALSE) |>
-  purrr::map(\(s) scale(s)[, 1], .parallel = TRUE) |>
+  map(in_parallel(\(s) scale(s)[, 1])) |>
   _[] |>
   as_polars_df()
 ```
@@ -79,7 +81,7 @@ To apply this to a subset of columns only, we can use `map_at()`:
 ```{r}
 dat |>
   as.list(as_series = FALSE) |>
-  purrr::map_at(c("carb", "mpg"), \(s) scale(s)[, 1], .parallel = TRUE) |>
+  map_at(c("carb", "mpg"), in_parallel(\(s) scale(s)[, 1])) |>
   _[] |>
   as_polars_df()
 ```
