chore!: Rename the package from neopolars to polars and bump version

--- a/README.Rmd
+++ b/README.Rmd
@@ -77,7 +77,7 @@ For example, writing the [example from the user guide of Python/Rust](https://do
 in R:
 
 ```{r}
-library(neopolars) # TODO: rename to polars
+library(polars)
 
 # Prepare a CSV file
 csv_file <- tempfile(fileext = ".csv")
