--- a/vignettes/install.Rmd
+++ b/vignettes/install.Rmd
@@ -13,7 +13,9 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 
-rust_toolchain_version <- RcppTOML::parseTOML("src/rust/rust-toolchain.toml")$toolchain$channel
+rust_toolchain_version <- RcppTOML::parseTOML(normalizePath(
+  "./src/rust/rust-toolchain.toml"
+))$toolchain$channel
 ```
 
 The `polars` package can be installed from R-universe or GitHub.
