--- a/vignettes/polars.Rmd
+++ b/vignettes/polars.Rmd
@@ -548,8 +548,8 @@ pl$DataFrame(a = 1, b = 2, c = 3, d = 4)$cast(pl$Int128) |>
 mirai::daemons(0)
 ```
 
-<!-- TODO-REWRITE: add link -->
-This is explained in more details in the vignette on ["Using custom functions"]().
+This is explained in more details in the vignette on Using custom functions
+(`vignette("custom-functions", package = "polars")`).
 
 ## Data types
 
